--- a/nest-api/Dockerfile
+++ b/nest-api/Dockerfile
@@ -4,6 +4,9 @@ RUN apk add --no-cache bash
 
 RUN npm install -g @nestjs/cli@7.5.6
 
-USER node
-
 WORKDIR /home/node/app
+
+RUN npm install
+
+
+CMD ["npm","run","start:dev"]
