--- a/react-frontend/Dockerfile
+++ b/react-frontend/Dockerfile
@@ -2,6 +2,9 @@ FROM node:12.14.0-alpine3.11
 
 RUN apk add --no-cache bash
 
-USER node
-
 WORKDIR /home/node/app
+
+RUN npm install
+
+
+CMD ["npm","start"]
