--- a/nest-api/package.json
+++ b/nest-api/package.json
@@ -29,6 +29,8 @@
     "rxjs": "^6.6.6"
   },
   "devDependencies": {
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/core": "^7.6.15",
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
