--- a/react-frontend/Dockerfile
+++ b/react-frontend/Dockerfile
@@ -1,10 +1,11 @@
 FROM node:12.14.0-alpine3.11
 
-RUN apk add --no-cache bash
+WORKDIR /usr/src/app
 
-WORKDIR /home/node/app
+COPY package*.json ./
 
 RUN npm install
 
+COPY . .
 
 CMD ["npm","start"]
