--- a/react-frontend/Dockerfile
+++ b/react-frontend/Dockerfile
@@ -1,11 +1,7 @@
 FROM node:12.14.0-alpine3.11
 
-WORKDIR /usr/src/app
+RUN apk add --no-cache bash
 
-COPY package*.json ./
+USER node
 
-RUN npm install
-
-COPY . .
-
-CMD ["npm","start"]
+WORKDIR /home/node/app
