--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-frontend",
+  "name": "react_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,8 +13,9 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.4",
+    "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
