--- a/k8s/backend/deploy.yaml
+++ b/k8s/backend/deploy.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: backend
-          image: james1515/imersao2-backend:latest
+          image: james1515/nest-api:latest
           ports:
             - containerPort: 3000
